--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "name": "smart-attendance-tracker-backend",
   "version": "1.0.0",
   "bin": {
-    "backend": "bin/backend.js"
+    "backend": "bin/app.js"
   },
   "scripts": {
     "build": "tsc",
