--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -2,3 +2,8 @@
 VITE_AWS_REGION=us-east-1
 VITE_AWS_USER_POOL_ID=your-user-pool-id
 VITE_AWS_USER_POOL_CLIENT_ID=your-client-id
+
+# AWS S3 Configuration for Face Registration
+VITE_AWS_S3_BUCKET=your-face-registration-bucket-name
+VITE_AWS_S3_REGION=us-east-1
+VITE_AWS_IDENTITY_POOL_ID=your-identity-pool-id
