--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -1,26 +1,28 @@
 {
-  "name": "smart-attendance-tracker-backend",
+  "name": "smart-attendanc-tracker-infra",
   "version": "1.0.0",
   "bin": {
-    "backend": "bin/app.js"
+    "smart-attendanc-tracker-infra": "dist/bin/app.js"
   },
   "scripts": {
-    "build": "tsc",
+    "build": " npm run clean && tsc",
+    "clean": "rm -rf dist",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "deploy": "npm run build && cdk deploy"
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
     "@types/node": "22.7.9",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
-    "aws-cdk": "2.1026.0",
+    "aws-cdk": "2.1031.2",
     "ts-node": "^10.9.2",
     "typescript": "~5.6.3"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.211.0",
+    "aws-cdk-lib": "2.215.0",
     "constructs": "^10.0.0"
   }
 }
