--- a/infrastructure/tsconfig.json
+++ b/infrastructure/tsconfig.json
@@ -23,7 +23,9 @@
     "skipLibCheck": true,
     "typeRoots": [
       "./node_modules/@types"
-    ]
+    ],
+    "rootDir": "./",
+    "outDir": "./dist"
   },
   "exclude": [
     "node_modules",
