refactor(face-registration): migrate from S3 direct upload to API Gateway architecture

--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -5,8 +5,7 @@
     "smart-attendanc-tracker-infra": "dist/bin/app.js"
   },
   "scripts": {
-    "build": " npm run clean && tsc",
-    "clean": "rm -rf dist",
+    "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
     "cdk": "cdk",
