--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -3,5 +3,7 @@ VITE_AWS_REGION=us-east-1
 VITE_AWS_USER_POOL_ID=your-user-pool-id
 VITE_AWS_USER_POOL_CLIENT_ID=your-client-id
 
-# API Gateway Configuration
-VITE_API_ENDPOINT=https://your-api-id.execute-api.us-east-1.amazonaws.com
+# API Gateway Configuration (REST API Gateway)
+# Note: REST API includes /api stage in URL
+VITE_API_ENDPOINT=https://your-api-id.execute-api.us-east-1.amazonaws.com/api
+VITE_API_KEY=your-api-key-here
